--- a/ps-be/refactor/0-template/plan/biz/单业务模块重构计划模板.md
+++ b/ps-be/refactor/0-template/plan/biz/单业务模块重构计划模板.md
@@ -128,7 +128,7 @@
 **4.1.1 业务接口档案建立**
 - 扫描现有Web接口，记录所有API的URL、参数、返回值
 - 生成文档内容主体是中文
-- 生成接口业务说明文档：`{{项目路径}}/refactor/5-info/{{当前日期}}/{{模块名称}}/{{模块名称}}-test-api.md`，包括接口入参、返回类型，接口作用。文件名字要严格匹配，且该目录只生成这一个文件。
+- 生成接口业务说明文档：`{{项目路径}}/refactor/5-info/{{当前日期}}/{{模块名称}}/{{模块名称}}-info-api.md`，包括接口入参、返回类型，接口作用。文件名字要严格匹配，且该目录只生成这一个文件。
 - 生成接口测试文档：`{{项目路径}}/refactor/2-test/{{当前日期}}/{{模块名称}}/{{模块名称}}-test-api.md`。文件名字要严格匹配，且该目录只生成这一个文件。文档内容主体是中文，包括接口测试用例、测试步骤。
 - 生成接口测试脚本：文件前缀为 `{{项目路径}}/refactor/3-script/{{当前日期}}/{{模块名称}}/{{模块名称}}-test-api`。文件名字要严格匹配，且该目录只生成这一个文件。文件内容主体是中文，根据接口测试文档，生成接口测试脚本。
 - 执行接口测试脚本：启动项目，项目路径为：`{{项目路径}}`，并执行接口测试脚本。文件名字要严格匹配，且该目录只生成这一个文件。
