docs(重构模板): 更新单业务模块重构计划文档的命名和内容
- 统一文档命名规范，使用更简洁的命名方式
- 调整目录结构描述的格式
- 新增依赖关系分析和数据模型分析报告
- 更新接口相关文档的命名和路径

--- a/ps-be/refactor/0-template/plan/biz/单业务模块重构计划模板.md
+++ b/ps-be/refactor/0-template/plan/biz/单业务模块重构计划模板.md
@@ -25,7 +25,7 @@
 
 **输出格式和存储位置**：
 1. 完整的单模块重构计划文档，存储在：`{{项目路径}}/refactor/1-plan/{{当前日期}}/{{模块名称}}`目录下
-2. 完整的单模块重构计划文档，命名为：`{{模块名称}}-单业务模块重构计划.md`
+2. 完整的单模块重构计划文档，命名为：`{{模块名称}}-重构计划.md`
 
 ---
 
@@ -91,7 +91,7 @@
 
 ```
 {{模块名称}}/
-├── app/                    # 应用服务层
+├── app/                   # 应用服务层
 │   ├── assembler/         # 对象装配器
 │   ├── dto/               # 数据传输对象
 │   └── service/           # 应用服务
@@ -128,21 +128,23 @@
 **4.1.1 业务接口档案建立**
 - 扫描现有Web接口，记录所有API的URL、参数、返回值
 - 生成文档内容主体是中文
-- 生成接口业务说明文档：`{{项目路径}}/refactor/5-info/{{当前日期}}/{{模块名称}}/{{模块名称}}-info-api.md`，包括接口入参、返回类型，接口作用。文件名字要严格匹配，且该目录只生成这一个文件。
-- 生成接口测试文档：`{{项目路径}}/refactor/2-test/{{当前日期}}/{{模块名称}}/{{模块名称}}-test-api.md`。文件名字要严格匹配，且该目录只生成这一个文件。文档内容主体是中文，包括接口测试用例、测试步骤。
-- 生成接口测试脚本：文件前缀为 `{{项目路径}}/refactor/3-script/{{当前日期}}/{{模块名称}}/{{模块名称}}-test-api`。文件名字要严格匹配，且该目录只生成这一个文件。文件内容主体是中文，根据接口测试文档，生成接口测试脚本。
+- 生成接口业务说明文档：`{{项目路径}}/refactor/5-info/{{当前日期}}/{{模块名称}}/{{模块名称}}-接口说明.md`，包括接口入参、返回类型，接口作用。文件名字要严格匹配，且该目录只生成这一个文件。
+- 生成接口测试文档：`{{项目路径}}/refactor/2-test/{{当前日期}}/{{模块名称}}/{{模块名称}}-测试接口.md`。文件名字要严格匹配，且该目录只生成这一个文件。文档内容主体是中文，包括接口测试用例、测试步骤。
+- 生成接口测试脚本：文件前缀为 `{{项目路径}}/refactor/3-script/{{当前日期}}/{{模块名称}}/{{模块名称}}-测试脚本`。文件名字要严格匹配，且该目录只生成这一个文件。文件内容主体是中文，根据接口测试文档，生成接口测试脚本。
 - 执行接口测试脚本：启动项目，项目路径为：`{{项目路径}}`，并执行接口测试脚本。文件名字要严格匹配，且该目录只生成这一个文件。
-- 生成接口测试报告：`{{项目路径}}/refactor/4-eval/{{当前日期}}/{{模块名称}}/{{模块名称}}-test-api-eval.md`。文件名字要严格匹配，且该目录只生成这一个文件。文档内容主体是中文，包括接口测试用例、测试步骤、预期结果、实际结果、测试状态、测试时间等。
+- 生成接口测试报告：`{{项目路径}}/refactor/4-eval/{{当前日期}}/{{模块名称}}/{{模块名称}}-测试接口评估.md`。文件名字要严格匹配，且该目录只生成这一个文件。文档内容主体是中文，包括接口测试用例、测试步骤、预期结果、实际结果、测试状态、测试时间等。
 
 **4.1.2 依赖关系分析**
 - 分析模块内部依赖关系
 - 识别外部模块依赖和第三方依赖
 - 绘制依赖关系图，识别循环依赖风险
+- 生成依赖关系分析报告：`{{项目路径}}/refactor/6-analysis/{{当前日期}}/{{模块名称}}/{{模块名称}}-依赖关系分析.md`。文件名字要严格匹配，且该目录只生成这一个依赖关系分析报告。文档内容主体是中文。
 
 **4.1.3 数据模型分析**
 - 梳理现有实体关系
 - 分析PO对象和业务对象的映射关系
 - 识别数据访问模式和查询复杂度
+- 生成数据模型分析报告：`{{项目路径}}/refactor/6-analysis/{{当前日期}}/{{模块名称}}/{{模块名称}}-数据模型分析.md`。文件名字要严格匹配，且该目录只生成这一个数据模型分析报告。文档内容主体是中文。
 
 ### 阶段二：领域层重构（第2-3周）
 
@@ -181,7 +183,7 @@
 **4.5.2 接口测试验证**
 - 执行接口测试脚本：重构完，重启项目，项目路径为：`{{项目路径}}`，再次执行{{模块名称}}接口测试脚本
 - 生成文档内容主体是中文
-- 接口测试报告比对：执行接口测试脚本中每个接口，并将结果跟`{{项目路径}}/refactor/4-eval/{{当前日期}}/{{模块名称}}/{{模块名称}}-test-api-eval.md`进行对比，将对比结果进度和状态同步到该接口测试报告中
+- 接口测试报告比对：执行接口测试脚本中每个接口，并将结果跟`{{项目路径}}/refactor/4-eval/{{当前日期}}/{{模块名称}}/{{模块名称}}-测试接口评估.md`进行对比，将对比结果进度和状态同步到该接口测试报告中
 
 ## 5. 验收标准
 
