feat(用户模块): 添加用户模块配置类并更新服务层结构
添加UserModuleConfiguration类用于配置用户模块的组件扫描和事务管理
更新服务层结构文档，增加应用服务实现目录说明

--- a/ps-be/refactor/0-template/plan/biz/单业务模块重构计划模板.md
+++ b/ps-be/refactor/0-template/plan/biz/单业务模块重构计划模板.md
@@ -94,7 +94,8 @@
 ├── app/                   # 应用服务层
 │   ├── assembler/         # 对象装配器
 │   ├── dto/               # 数据传输对象
-│   └── service/           # 应用服务
+│   └── service/           # 应用服务接口
+│   └── impl/              # 应用服务实现
 ├── domain/                # 领域层
 │   ├── entity/            # 实体
 │   ├── event/             # 领域事件
