refactor(plan): 调整领域驱动设计重构计划目录结构与阶段安排
- 修改阶段二为目录结构重构，详细分解为目录调整、包命名规范和配置文件调整
- 按照DDD架构要求重新组织模块目录结构，清理无用文件并同步更新引用
- 统一包命名规范，重命名不符合规范的包和类并更新所有引用
- 更新Spring配置文件包扫描路径和组件扫描注解，确保项目正常启动运行
- 调整后续重构阶段划分，明确领域层、应用服务层、基础设施层和接口层的时间安排和任务内容
- 在接口层重构阶段强调不修改任何现有API的外部契约，保持兼容性

--- a/ps-be/refactor/0-template/plan/biz/单业务模块重构计划模板.md
+++ b/ps-be/refactor/0-template/plan/biz/单业务模块重构计划模板.md
@@ -145,36 +145,54 @@
 - 识别数据访问模式和查询复杂度
 - 生成数据模型分析报告：`{{项目路径}}/refactor/5-analysis/{{当前日期}}/{{模块名称}}/{{模块名称}}-数据模型分析.md`。文件名字要严格匹配，且该目录只生成这一个数据模型分析报告。文档内容主体是中文。
 
-### 阶段二：领域层重构（第2-3周）
+### 阶段二：目录结构重构（第2周）
 
-**4.2.1 实体和值对象重构**
+**4.2.1 目录结构调整**
+- 按照3.1节定义的目标DDD架构，重新组织模块目录结构
+- 移动现有文件到新的目录结构中，确保包路径与目录路径一致
+- 清理空目录和无用文件
+- 更新所有相关的import语句和配置文件
+
+**4.2.2 包命名规范统一**
+- 统一包命名规范，确保符合DDD分层架构要求
+- 重命名不符合规范的包和类
+- 更新所有引用这些包和类的地方
+
+**4.2.3 配置文件调整**
+- 更新Spring配置文件中的包扫描路径
+- 调整组件扫描注解确保能正确扫描到所有组件
+- 验证重构后的目录结构能正常启动和运行
+
+### 阶段三：领域层重构（第3-4周）
+
+**4.3.1 实体和值对象重构**
 {{基于具体模块的实体重构计划}}
 
-**4.2.2 仓储接口设计**
+**4.3.2 仓储接口设计**
 {{基于数据访问分析的仓储设计方案}}
 
-**4.2.3 领域服务提取**
+**4.3.3 领域服务提取**
 {{基于业务逻辑分析的领域服务设计}}
 
-### 阶段三：应用服务层重构（第3-4周）
+### 阶段四：应用服务层重构（第4-5周）
 
-**4.3.1 应用服务实现**
+**4.4.1 应用服务实现**
 {{基于用例分析的应用服务设计}}
 
-**4.3.2 DTO设计优化**
+**4.4.2 DTO设计优化**
 {{基于接口分析的DTO优化方案}}
 
-### 阶段四：基础设施层重构（第4-5周）
+### 阶段五：基础设施层重构（第5-6周）
 
-**4.4.1 仓储实现重构**
+**4.5.1 仓储实现重构**
 {{基于数据访问的实现方案}}
 
-**4.4.2 缓存策略优化**
+**4.5.2 缓存策略优化**
 {{基于性能分析的缓存方案}}
 
-### 阶段五：接口层重构（第5-6周）
+### 阶段六：接口层重构（第6-7周）
 
-**4.5.1 控制器重构**
+**4.6.1 控制器重构**
 - **⚠️ 重要约束**：不得修改任何现有API的URL、入参格式、返回格式
 - 重构内部实现逻辑，调用新的应用服务
 - 保持异常处理和响应格式完全一致
