--- a/ps-be/refactor/0-template/plan/biz/单业务模块重构计划模板.md
+++ b/ps-be/refactor/0-template/plan/biz/单业务模块重构计划模板.md
@@ -6,6 +6,7 @@
 1. 基于输入的参考资料和模块代码，生成具体模块的DDD重构计划文档。
 2. 严格执行生成的重构计划文档的每一步。
 3. 将重构计划的每阶段执行进度和结果同步到该重构计划文档中。
+4. **强制要求**：确保所有阶段执行完毕，清理无用文件，并保证重构后的代码在项目中编译通过。
 
 **执行要求**：
 1. 仔细分析所有输入资料，准确理解模块的业务职责和技术现状
@@ -13,6 +14,10 @@
 3. 基于实际代码结构和业务逻辑填充分析内容
 4. 保持原有功能不变的前提下制定重构方案
 5. 确保生成的计划具有可操作性和完整性
+6. **强制要求**：每个阶段执行完毕后必须在文档中同步状态
+7. **强制要求**：所有阶段必须执行完毕，不得遗漏
+8. **强制要求**：执行完毕后必须清理空目录和无用文件
+9. **强制要求**：执行完毕后必须确保重构后的代码在项目中编译通过
 
 ---
 
@@ -132,18 +137,21 @@
 - 生成接口业务说明文档：`{{项目路径}}/refactor/2-info/{{当前日期}}/{{模块名称}}/{{模块名称}}-接口说明.md`，包括接口入参、返回类型，接口作用。文件名字要严格匹配，且该目录只生成这一个文件。
 - 生成接口测试文档：`{{项目路径}}/refactor/3-test/{{当前日期}}/{{模块名称}}/{{模块名称}}-测试接口.md`。文件名字要严格匹配，且该目录只生成这一个文件。文档内容主体是中文，包括接口测试用例、测试步骤。
 - 生成接口测试脚本：文件前缀为 `{{项目路径}}/refactor/4-script/{{当前日期}}/{{模块名称}}/{{模块名称}}-测试脚本`。文件名字要严格匹配，且该目录只生成这一个文件。文件内容主体是中文，根据接口测试文档，生成接口测试脚本。
+- **执行状态**：☐ 未开始 ☐ 进行中 ☐ 已完成
 
 **4.1.2 依赖关系分析**
 - 分析模块内部依赖关系
 - 识别外部模块依赖和第三方依赖
 - 绘制依赖关系图，识别循环依赖风险
 - 生成依赖关系分析报告：`{{项目路径}}/refactor/5-analysis/{{当前日期}}/{{模块名称}}/{{模块名称}}-依赖关系分析.md`。文件名字要严格匹配，且该目录只生成这一个依赖关系分析报告。文档内容主体是中文。
+- **执行状态**：☐ 未开始 ☐ 进行中 ☐ 已完成
 
 **4.1.3 数据模型分析**
 - 梳理现有实体关系
 - 分析PO对象和业务对象的映射关系
 - 识别数据访问模式和查询复杂度
 - 生成数据模型分析报告：`{{项目路径}}/refactor/5-analysis/{{当前日期}}/{{模块名称}}/{{模块名称}}-数据模型分析.md`。文件名字要严格匹配，且该目录只生成这一个数据模型分析报告。文档内容主体是中文。
+- **执行状态**：☐ 未开始 ☐ 进行中 ☐ 已完成
 
 ### 阶段二：目录结构重构（第2周）
 
@@ -152,43 +160,53 @@
 - 移动现有文件到新的目录结构中，确保包路径与目录路径一致
 - 清理空目录和无用文件
 - 更新所有相关的import语句和配置文件
+- **执行状态**：☐ 未开始 ☐ 进行中 ☐ 已完成
 
 **4.2.2 包命名规范统一**
 - 统一包命名规范，确保符合DDD分层架构要求
 - 重命名不符合规范的包和类
 - 更新所有引用这些包和类的地方
+- **执行状态**：☐ 未开始 ☐ 进行中 ☐ 已完成
 
 **4.2.3 配置文件调整**
 - 更新Spring配置文件中的包扫描路径
 - 调整组件扫描注解确保能正确扫描到所有组件
 - 验证重构后的目录结构能正常启动和运行
+- **执行状态**：☐ 未开始 ☐ 进行中 ☐ 已完成
 
 ### 阶段三：领域层重构（第3-4周）
 
 **4.3.1 实体和值对象重构**
 {{基于具体模块的实体重构计划}}
+- **执行状态**：☐ 未开始 ☐ 进行中 ☐ 已完成
 
 **4.3.2 仓储接口设计**
 {{基于数据访问分析的仓储设计方案}}
+- **执行状态**：☐ 未开始 ☐ 进行中 ☐ 已完成
 
 **4.3.3 领域服务提取**
 {{基于业务逻辑分析的领域服务设计}}
+- **执行状态**：☐ 未开始 ☐ 进行中 ☐ 已完成
 
 ### 阶段四：应用服务层重构（第4-5周）
 
 **4.4.1 应用服务实现**
 {{基于用例分析的应用服务设计}}
+- **执行状态**：☐ 未开始 ☐ 进行中 ☐ 已完成
 
 **4.4.2 DTO设计优化**
 {{基于接口分析的DTO优化方案}}
+- **执行状态**：☐ 未开始 ☐ 进行中 ☐ 已完成
 
 ### 阶段五：基础设施层重构（第5-6周）
 
 **4.5.1 仓储实现重构**
 {{基于数据访问的实现方案}}
+- **执行状态**：☐ 未开始 ☐ 进行中 ☐ 已完成
 
 **4.5.2 缓存策略优化**
 {{基于性能分析的缓存方案}}
+- **执行状态**：☐ 未开始 ☐ 进行中 ☐ 已完成
 
 ### 阶段六：接口层重构（第6-7周）
 
@@ -196,20 +214,41 @@
 - **⚠️ 重要约束**：不得修改任何现有API的URL、入参格式、返回格式
 - 重构内部实现逻辑，调用新的应用服务
 - 保持异常处理和响应格式完全一致
+- **执行状态**：☐ 未开始 ☐ 进行中 ☐ 已完成
 
-## 5. 验收标准
+## 5. 最终验证与清理（第8周）
 
-### 5.1 功能验收标准
+### 5.1 编译验证
+- **强制要求**：确保重构后的代码在ps-be整个项目中编译通过
+- 执行完整的Maven编译命令：`mvn clean compile`
+- 记录编译结果和任何错误信息
+- **执行状态**：☐ 未开始 ☐ 进行中 ☐ 已完成
+
+### 5.2 文件清理
+- **强制要求**：删除所有空目录和无用文件
+- 检查并删除空的包目录
+- 清理临时文件和无用的配置文件
+- **执行状态**：☐ 未开始 ☐ 进行中 ☐ 已完成
+
+### 5.3 状态同步
+- **强制要求**：将所有阶段的执行状态同步到本文档中
+- 更新验收标准的完成情况
+- 记录重构过程中的问题和解决方案
+- **执行状态**：☐ 未开始 ☐ 进行中 ☐ 已完成
+
+## 6. 验收标准
+
+### 6.1 功能验收标准
 - [ ] **接口兼容性**：所有原有API接口URL、参数、返回值格式保持100%一致
 - [ ] **业务逻辑**：所有业务用例执行结果与重构前完全一致
 - [ ] **数据完整性**：数据读写操作结果无任何差异
 
-### 5.2 质量验收标准  
+### 6.2 质量验收标准  
 - [ ] **代码编译**：所有代码编译通过，无编译错误和警告
 - [ ] **测试覆盖**：单元测试覆盖率≥80%
 - [ ] **代码质量**：代码重复率<5%，复杂度评级≥B级
 
-### 5.3 架构验收标准
+### 6.3 架构验收标准
 - [ ] **DDD架构**：严格遵循DDD分层架构和命名规范
 - [ ] **依赖管理**：消除循环依赖，依赖方向符合架构原则
 - [ ] **接口设计**：API设计遵循RESTful规范
@@ -225,6 +264,10 @@
 3. **保持一致性**：确保重构计划与参考文档中的整体策略保持一致
 4. **验证可行性**：确保所有计划都具有实际可操作性
 5. **风险评估**：基于实际情况识别和评估具体的风险点
+6. **强制执行**：确保所有阶段都严格执行完毕
+7. **状态同步**：每个阶段执行完毕后必须在文档中同步状态
+8. **编译验证**：执行完毕后必须确保重构后的代码在项目中编译通过
+9. **文件清理**：执行完毕后必须清理空目录和无用文件
 
 **质量检查清单**：
 - [ ] 所有占位符已被具体内容替换
@@ -232,3 +275,7 @@
 - [ ] 重构计划具有可操作性和时间节点
 - [ ] 风险识别和缓解措施切实可行
 - [ ] 验收标准明确且可验证
+- [ ] 所有阶段都已执行完毕
+- [ ] 所有阶段状态已在文档中同步
+- [ ] 重构后的代码在项目中编译通过
+- [ ] 空目录和无用文件已被清理
