refactor(plan): 规范项目目录结构命名
- 新增 UserModuleConfiguration.java 文件
- 接口层目录由 intf/ 改为 interfaces/，增加代码清晰度
- 值对象目录由 vo/ 改为 valueobject/，提升命名完整性
- 服务层结构调整，impl/ 作为 service/ 的子目录，明晰父子关系
- 所有目录名改为完整单词，避免使用缩写形式
- 添加目录结构规范说明，包含接口层、值对象和服务层的命名规则

--- a/ps-be/refactor/0-template/plan/biz/单业务模块重构计划模板.md
+++ b/ps-be/refactor/0-template/plan/biz/单业务模块重构计划模板.md
@@ -96,30 +96,53 @@
 
 ```
 {{模块名称}}/
-├── app/                   # 应用服务层
-│   ├── assembler/         # 对象装配器
-│   ├── dto/               # 数据传输对象
-│   └── service/           # 应用服务接口
-│   └── impl/              # 应用服务实现
-├── domain/                # 领域层
-│   ├── entity/            # 实体
-│   ├── event/             # 领域事件
-│   ├── repo/              # 仓储接口
-│   ├── service/           # 领域服务
-│   └── vo/                # 值对象
-├── infra/                 # 基础设施层
-│   └── persistence/       # 持久化
-│       ├── assembler/     # PO装配器
-│       ├── entity/        # 持久化对象
-│       ├── mapper/        # MyBatis映射器
-│       └── repo/          # 仓储实现
-└── intf/                  # 接口层
-    └── web/               # Web接口
-        ├── controller/    # 控制器
-        └── dto/           # 接口DTO
+├── UserModuleConfiguration.java
+├── app/                        # 应用服务层
+│   ├── assembler/              # 对象装配器
+│   ├── dto/                    # 数据传输对象
+│   └── service/                # 应用服务
+│       └── impl/               # 应用服务实现
+├── domain/                     # 领域层
+│   ├── entity/                 # 实体
+│   ├── event/                  # 领域事件
+│   ├── repo/                   # 仓储接口
+│   ├── service/                # 领域服务
+│   └── valueobject/            # 值对象
+├── infra/                      # 基础设施层
+│   └── persistence/            # 持久化
+│       ├── assembler/          # PO装配器
+│       ├── entity/             # 持久化对象
+│       ├── mapper/             # MyBatis映射器
+│       └── repo/               # 仓储实现
+└── interfaces/                 # 接口层
+    └── web/                    # Web接口
+        ├── controller/         # 控制器
+        └── dto/                # 接口DTO
 ```
 
-### 3.2 领域模型设计
+### 3.2 目录结构规范说明
+
+根据项目重构规范，目录结构需遵循以下命名规则：
+
+1. **接口层目录规范**：
+   - 使用 `interfaces/` 目录，不使用 `intf/` 缩写
+   - 保持接口层结构清晰，包含controller和dto子目录
+
+2. **值对象目录规范**：
+   - 使用 `valueobject/` 目录，不使用 `vo/` 缩写
+   - 保持值对象的完整命名，提高代码可读性
+
+3. **服务层目录规范**：
+   - `service/` 目录存放服务接口
+   - `impl/` 目录作为service的子目录，存放具体实现
+   - `service/impl/` 是父子关系，不是平行关系
+
+4. **目录命名一致性原则**：
+   - 所有目录名使用完整单词，不使用缩写
+   - 保持命名语义清晰，便于理解和维护
+   - 避免使用含义模糊的缩写形式
+
+### 3.3 领域模型设计
 
 **聚合根识别**：
 {{基于业务分析识别的聚合根和边界}}
