docs(架构规范): 更新服务层目录结构和编译验证说明
- 修正服务层目录结构中 service 和 impl 的关系说明
- 更新编译验证命令，添加 spring-boot:run 参数

--- a/ps-be/refactor/0-template/plan/biz/单业务模块重构计划模板.md
+++ b/ps-be/refactor/0-template/plan/biz/单业务模块重构计划模板.md
@@ -134,8 +134,8 @@
 
 3. **服务层目录规范**：
    - `service/` 目录存放服务接口
-   - `impl/` 目录作为service的子目录，存放具体实现
-   - `service/impl/` 是父子关系，不是平行关系
+   - `impl/` 存放 service 服务接口的具体实现
+   - `service 和 impl` 目录不是父子关系，必须是兄弟关系
 
 4. **目录命名一致性原则**：
    - 所有目录名使用完整单词，不使用缩写
@@ -243,7 +243,7 @@
 
 ### 5.1 编译验证
 - **强制要求**：确保重构后的代码在ps-be整个项目中编译通过
-- 执行完整的Maven编译命令：`mvn clean compile`
+- 执行完整的Maven编译命令：`mvn clean compile spring-boot:run -DskipTests`
 - 记录编译结果和任何错误信息
 - **执行状态**：☐ 未开始 ☐ 进行中 ☐ 已完成
 
