refactor(architecture): 优化目录结构及代码迁移规范
- app/service 和 impl 目录调整为兄弟关系，明确为服务接口及实现目录
- domain/service 和 vo 目录名称调整，统一为领域服务接口及值对象简称
- 规范接口层目录，使用 intf 代替 interfaces 作为接口层目录名
- 所有 Controller 和 DTO 文件迁移至 intf/web/controller 和 intf/web/dto 子目录
- 禁止 intf/web 目录下直接存放 Controller 和 DTO 文件
- 新增代码迁移检查清单，确保迁移操作规范执行并验证功能正常
- 删除迁移后空目录及无用配置，保持目录结构整洁一致

--- a/ps-be/refactor/0-template/plan/biz/单业务模块重构计划模板.md
+++ b/ps-be/refactor/0-template/plan/biz/单业务模块重构计划模板.md
@@ -100,14 +100,14 @@
 ├── app/                        # 应用服务层
 │   ├── assembler/              # 对象装配器
 │   ├── dto/                    # 数据传输对象
-│   └── service/                # 应用服务
-│       └── impl/               # 应用服务实现
+│   └── service/                # 应用服务接口
+│   └── impl/                   # 应用服务接口
 ├── domain/                     # 领域层
 │   ├── entity/                 # 实体
 │   ├── event/                  # 领域事件
 │   ├── repo/                   # 仓储接口
-│   ├── service/                # 领域服务
-│   └── valueobject/            # 值对象
+│   ├── service/                # 领域服务接口
+│   └── vo/                     # 值对象
 ├── infra/                      # 基础设施层
 │   └── persistence/            # 持久化
 │       ├── assembler/          # PO装配器
@@ -125,24 +125,49 @@
 根据项目重构规范，目录结构需遵循以下命名规则：
 
 1. **接口层目录规范**：
-   - 使用 `interfaces/` 目录，不使用 `intf/` 缩写
+   - 使用 `intf/` 目录，不使用 `interfaces/` 缩写
    - 保持接口层结构清晰，包含controller和dto子目录
+   - 所有Controller类必须迁移到 `intf/web/controller/` 目录下
+   - 所有DTO类必须迁移到 `intf/web/dto/` 目录下
+   - 禁止在 `intf/web/` 目录下直接存放Controller和DTO文件
+   - 迁移完成后，检查并删除 `intf/web/` 目录下的直接Controller和DTO文件
 
 2. **值对象目录规范**：
-   - 使用 `valueobject/` 目录，不使用 `vo/` 缩写
+   - 使用 `vo/` 目录，不使用 `valueobject/` 缩写
    - 保持值对象的完整命名，提高代码可读性
 
 3. **服务层目录规范**：
-   - `service/` 目录存放服务接口
-   - `impl/` 存放 service 服务接口的具体实现
-   - `service 和 impl` 目录不是父子关系，必须是兄弟关系
+   - `service/` 目录存放服务 api 接口
+   - `impl/` 目录存放服务 api 接口的具体实现
+   - `service` 和 `impl` 目录不是父子关系，是兄弟关系
 
 4. **目录命名一致性原则**：
    - 所有目录名使用完整单词，不使用缩写
    - 保持命名语义清晰，便于理解和维护
    - 避免使用含义模糊的缩写形式
 
-### 3.3 领域模型设计
+### 3.3 代码迁移检查清单
+
+为确保代码迁移工作正确执行，必须完成以下检查项：
+
+1. **Controller迁移检查**：
+   - [ ] 检查 `intf/web/` 目录下是否存在直接的Controller文件
+   - [ ] 将所有Controller文件迁移到 `intf/web/controller/` 目录
+   - [ ] 更新所有相关的import语句
+   - [ ] 验证Controller功能正常
+
+2. **DTO迁移检查**：
+   - [ ] 检查 `intf/web/` 目录下是否存在直接的DTO文件
+   - [ ] 将所有DTO文件迁移到 `intf/web/dto/` 目录
+   - [ ] 更新所有相关的import语句
+   - [ ] 验证DTO功能正常
+
+3. **目录清理检查**：
+   - [ ] 删除迁移后留下的空目录
+   - [ ] 删除无用的配置文件
+   - [ ] 验证目录结构符合目标架构
+
+### 3.4 领域模型设计
 
 **聚合根识别**：
 {{基于业务分析识别的聚合根和边界}}
