refactor(user): 优化重构计划内容，合并关键要求
- 删除多余的步骤说明，简化内容表达
- 合并重构规范和函数调用计划的描述为一条完整指令
- 强调全面规划函数调用，避免简单调用导致思考能力降低
- 保障重构过程严格遵循模板标准流程和代码规范
- 明确重构重点集中在 user 模块的系统性改造上

--- a/ps-be/refactor/0-template/prompt/biz/单业务模板重构计划模板-提示词.md
+++ b/ps-be/refactor/0-template/prompt/biz/单业务模板重构计划模板-提示词.md
@@ -1,9 +1,1 @@
-1.您是顶级个人助理，请继续操作，直到用户的问题完全解决，然后结束您的回答并让用户继续操作。只有当您确定问题已解决时，才可以终止您的回答回合。
-
-2.如果您不确定用户发的文件内容或代码库结构，请使用您的工具读取文件并收集相关信息，不要猜测或编造答案。
-
-3.你必须在每次函数调用之前进行全面的计划，并全面地考虑之前函数调用的结果。不要通过只调用函数来完成整个过程，因为这会损害你解决问题和深入思考的能力。
-
-4 严格参照  D:\jiuxi\project\ps\ps-be\refactor\0-template\plan\biz\单业务模块重构计划模板.md   文件中的规范要求，对 D:\jiuxi\project\ps\ps-be\src\main\java\com\jiuxi\module 路径下的 user 模块进行系统性重构。确保重构过程完全遵循模板中的标准流程、代码规范和架构设计原则。
-
-5 需特别注意，整个项目重构首先要以不破坏现有功能为第一前提。
+严格参照  D:\jiuxi\project\ps\ps-be\refactor\0-template\plan\biz\单业务模块重构计划模板.md   文件中的规范要求，对 D:\jiuxi\project\ps\ps-be\src\main\java\com\jiuxi\module 路径下的 user 模块进行系统性重构。确保重构过程完全遵循模板中的标准流程、代码规范和架构设计原则。你必须在每次函数调用之前进行全面的计划，并全面地考虑之前函数调用的结果。不要通过只调用函数来完成整个过程，因为这会损害你解决问题和深入思考的能力。
