docs(refactor-plan): 更新重构计划文档规范与目录结构
- 新增日期获取规范，要求使用系统当前日期，格式为YYYY-MM-DD，确保日期准确性
- 调整服务层目录说明，明确service和impl为同级目录且impl不得嵌套于service内
- 重命名接口层目录为intf，并规范所有目录名称使用完整单词
- 定义阶段执行状态必须同步至文档，强化阶段性工作执行和文档完整性要求
- 增加文档生成强制要求，阶段一所有文档必须全量生成
- 明确最终验收标准中包含日期准确性、目录规范及文档完整性检查
- 补充质量检查清单，新增当前日期正确获取、目录规范遵守及文档生成完整性项

--- a/ps-be/refactor/0-template/plan/biz/单业务模块重构计划模板.md
+++ b/ps-be/refactor/0-template/plan/biz/单业务模块重构计划模板.md
@@ -32,6 +32,11 @@
 1. 完整的单模块重构计划文档，存储在：`{{项目路径}}/refactor/1-plan/{{当前日期}}/{{模块名称}}`目录下
 2. 完整的单模块重构计划文档，命名为：`{{模块名称}}-重构计划.md`
 
+**日期获取规范**：
+- **强制要求**：使用系统当前日期，格式为YYYY-MM-DD
+- **准确性保证**：必须通过系统时间获取，不得使用缓存或预设值
+- **获取方式**：应使用实时系统调用获取当前日期，确保准确性
+
 ---
 
 ## 📖 模板内容
@@ -100,8 +105,8 @@
 ├── app/                        # 应用服务层
 │   ├── assembler/              # 对象装配器
 │   ├── dto/                    # 数据传输对象
-│   └── service/                # 应用服务接口
-│   └── impl/                   # 应用服务接口
+│   ├── service/                # 应用服务接口
+│   └── impl/                   # 应用服务实现
 ├── domain/                     # 领域层
 │   ├── entity/                 # 实体
 │   ├── event/                  # 领域事件
@@ -114,7 +119,7 @@
 │       ├── entity/             # 持久化对象
 │       ├── mapper/             # MyBatis映射器
 │       └── repo/               # 仓储实现
-└── interfaces/                 # 接口层
+└── intf/                       # 接口层(重命名为intf)
     └── web/                    # Web接口
         ├── controller/         # 控制器
         └── dto/                # 接口DTO
@@ -139,7 +144,8 @@
 3. **服务层目录规范**：
    - `service/` 目录存放服务 api 接口
    - `impl/` 目录存放服务 api 接口的具体实现
-   - `service` 和 `impl` 目录不是父子关系，是兄弟关系
+   - `service` 和 `impl` 目录必须为同级目录，都位于app目录下
+   - **强制要求**：impl目录不得嵌套在service目录内
 
 4. **目录命名一致性原则**：
    - 所有目录名使用完整单词，不使用缩写
@@ -180,18 +186,21 @@
 ### 阶段一：准备与分析（第1周）
 
 **4.1.1 业务接口档案建立**
+- **强制要求**：必须生成以下所有文档，缺一不可
 - 扫描现有Web接口，记录所有API的URL、参数、返回值
 - 生成文档内容主体是中文
 - 生成接口业务说明文档：`{{项目路径}}/refactor/2-info/{{当前日期}}/{{模块名称}}/{{模块名称}}-接口说明.md`，包括接口入参、返回类型，接口作用。文件名字要严格匹配，且该目录只生成这一个文件。
 - 生成接口测试文档：`{{项目路径}}/refactor/3-test/{{当前日期}}/{{模块名称}}/{{模块名称}}-测试接口.md`。文件名字要严格匹配，且该目录只生成这一个文件。文档内容主体是中文，包括接口测试用例、测试步骤。
 - 生成接口测试脚本：文件前缀为 `{{项目路径}}/refactor/4-script/{{当前日期}}/{{模块名称}}/{{模块名称}}-测试脚本`。文件名字要严格匹配，且该目录只生成这一个文件。文件内容主体是中文，根据接口测试文档，生成接口测试脚本。
 - **执行状态**：☐ 未开始 ☐ 进行中 ☐ 已完成
+- **文档生成检查**：☐ 未完成 ☐ 部分完成 ☑ 全部完成
 
 **4.1.2 依赖关系分析**
 - 分析模块内部依赖关系
 - 识别外部模块依赖和第三方依赖
 - 绘制依赖关系图，识别循环依赖风险
 - 生成依赖关系分析报告：`{{项目路径}}/refactor/5-analysis/{{当前日期}}/{{模块名称}}/{{模块名称}}-依赖关系分析.md`。文件名字要严格匹配，且该目录只生成这一个依赖关系分析报告。文档内容主体是中文。
+- **强制要求**：执行完毕后必须在文档中同步状态
 - **执行状态**：☐ 未开始 ☐ 进行中 ☐ 已完成
 
 **4.1.3 数据模型分析**
@@ -199,6 +208,7 @@
 - 分析PO对象和业务对象的映射关系
 - 识别数据访问模式和查询复杂度
 - 生成数据模型分析报告：`{{项目路径}}/refactor/5-analysis/{{当前日期}}/{{模块名称}}/{{模块名称}}-数据模型分析.md`。文件名字要严格匹配，且该目录只生成这一个数据模型分析报告。文档内容主体是中文。
+- **强制要求**：执行完毕后必须在文档中同步状态
 - **执行状态**：☐ 未开始 ☐ 进行中 ☐ 已完成
 
 ### 阶段二：目录结构重构（第2周）
@@ -208,52 +218,62 @@
 - 移动现有文件到新的目录结构中，确保包路径与目录路径一致
 - 清理空目录和无用文件
 - 更新所有相关的import语句和配置文件
+- **强制要求**：执行完毕后必须在文档中同步状态
 - **执行状态**：☐ 未开始 ☐ 进行中 ☐ 已完成
 
 **4.2.2 包命名规范统一**
 - 统一包命名规范，确保符合DDD分层架构要求
 - 重命名不符合规范的包和类
 - 更新所有引用这些包和类的地方
+- **强制要求**：执行完毕后必须在文档中同步状态
 - **执行状态**：☐ 未开始 ☐ 进行中 ☐ 已完成
 
 **4.2.3 配置文件调整**
 - 更新Spring配置文件中的包扫描路径
 - 调整组件扫描注解确保能正确扫描到所有组件
 - 验证重构后的目录结构能正常启动和运行
+- **强制要求**：执行完毕后必须在文档中同步状态
 - **执行状态**：☐ 未开始 ☐ 进行中 ☐ 已完成
 
 ### 阶段三：领域层重构（第3-4周）
 
 **4.3.1 实体和值对象重构**
 {{基于具体模块的实体重构计划}}
+- **强制要求**：执行完毕后必须在文档中同步状态
 - **执行状态**：☐ 未开始 ☐ 进行中 ☐ 已完成
 
 **4.3.2 仓储接口设计**
 {{基于数据访问分析的仓储设计方案}}
+- **强制要求**：执行完毕后必须在文档中同步状态
 - **执行状态**：☐ 未开始 ☐ 进行中 ☐ 已完成
 
 **4.3.3 领域服务提取**
 {{基于业务逻辑分析的领域服务设计}}
+- **强制要求**：执行完毕后必须在文档中同步状态
 - **执行状态**：☐ 未开始 ☐ 进行中 ☐ 已完成
 
 ### 阶段四：应用服务层重构（第4-5周）
 
 **4.4.1 应用服务实现**
 {{基于用例分析的应用服务设计}}
+- **强制要求**：执行完毕后必须在文档中同步状态
 - **执行状态**：☐ 未开始 ☐ 进行中 ☐ 已完成
 
 **4.4.2 DTO设计优化**
 {{基于接口分析的DTO优化方案}}
+- **强制要求**：执行完毕后必须在文档中同步状态
 - **执行状态**：☐ 未开始 ☐ 进行中 ☐ 已完成
 
 ### 阶段五：基础设施层重构（第5-6周）
 
 **4.5.1 仓储实现重构**
 {{基于数据访问的实现方案}}
+- **强制要求**：执行完毕后必须在文档中同步状态
 - **执行状态**：☐ 未开始 ☐ 进行中 ☐ 已完成
 
 **4.5.2 缓存策略优化**
 {{基于性能分析的缓存方案}}
+- **强制要求**：执行完毕后必须在文档中同步状态
 - **执行状态**：☐ 未开始 ☐ 进行中 ☐ 已完成
 
 ### 阶段六：接口层重构（第6-7周）
@@ -262,6 +282,7 @@
 - **⚠️ 重要约束**：不得修改任何现有API的URL、入参格式、返回格式
 - 重构内部实现逻辑，调用新的应用服务
 - 保持异常处理和响应格式完全一致
+- **强制要求**：执行完毕后必须在文档中同步状态
 - **执行状态**：☐ 未开始 ☐ 进行中 ☐ 已完成
 
 ## 5. 最终验证与清理（第8周）
@@ -270,18 +291,21 @@
 - **强制要求**：确保重构后的代码在ps-be整个项目中编译通过
 - 执行完整的Maven编译命令：`mvn clean compile spring-boot:run -DskipTests`
 - 记录编译结果和任何错误信息
+- **强制要求**：执行完毕后必须在文档中同步状态
 - **执行状态**：☐ 未开始 ☐ 进行中 ☐ 已完成
 
 ### 5.2 文件清理
 - **强制要求**：删除所有空目录和无用文件
 - 检查并删除空的包目录
 - 清理临时文件和无用的配置文件
+- **强制要求**：执行完毕后必须在文档中同步状态
 - **执行状态**：☐ 未开始 ☐ 进行中 ☐ 已完成
 
 ### 5.3 状态同步
 - **强制要求**：将所有阶段的执行状态同步到本文档中
 - 更新验收标准的完成情况
 - 记录重构过程中的问题和解决方案
+- **强制要求**：执行完毕后必须在文档中同步状态
 - **执行状态**：☐ 未开始 ☐ 进行中 ☐ 已完成
 
 ## 6. 验收标准
@@ -313,9 +337,12 @@
 4. **验证可行性**：确保所有计划都具有实际可操作性
 5. **风险评估**：基于实际情况识别和评估具体的风险点
 6. **强制执行**：确保所有阶段都严格执行完毕
-7. **状态同步**：每个阶段执行完毕后必须在文档中同步状态
+7. **状态同步**：每个阶段执行完毕后必须在文档中同步状态，不得遗漏
 8. **编译验证**：执行完毕后必须确保重构后的代码在项目中编译通过
 9. **文件清理**：执行完毕后必须清理空目录和无用文件
+10. **日期准确性**：确保所有日期字段使用系统当前日期
+11. **目录规范**：严格遵守服务层目录规范，impl目录与service目录为同级关系
+12. **文档完整性**：阶段一所有文档必须强制生成
 
 **质量检查清单**：
 - [ ] 所有占位符已被具体内容替换
@@ -327,3 +354,6 @@
 - [ ] 所有阶段状态已在文档中同步
 - [ ] 重构后的代码在项目中编译通过
 - [ ] 空目录和无用文件已被清理
+- [ ] 当前日期获取准确无误
+- [ ] 服务层目录规范严格遵守
+- [ ] 阶段一所有文档已强制生成
