--- a/ps-be/refactor/0-template/plan/biz/单业务模块重构计划模板.md
+++ b/ps-be/refactor/0-template/plan/biz/单业务模块重构计划模板.md
@@ -101,77 +101,205 @@
 
 ```
 {{模块名称}}/
-├── UserModuleConfiguration.java
-├── app/                        # 应用服务层
-│   ├── assembler/              # 对象装配器
-│   ├── dto/                    # 数据传输对象
-│   ├── service/                # 应用服务接口
-│   └── impl/                   # 应用服务实现
-├── domain/                     # 领域层
-│   ├── entity/                 # 实体
-│   ├── event/                  # 领域事件
-│   ├── repo/                   # 仓储接口
-│   ├── service/                # 领域服务接口
-│   └── vo/                     # 值对象
-├── infra/                      # 基础设施层
-│   └── persistence/            # 持久化
-│       ├── assembler/          # PO装配器
-│       ├── entity/             # 持久化对象
-│       ├── mapper/             # MyBatis映射器
-│       └── repo/               # 仓储实现
-└── intf/                       # 接口层(重命名为intf)
-    └── web/                    # Web接口
-        ├── controller/         # 控制器
-        └── dto/                # 接口DTO
+├── {{模块名称}}ModuleConfiguration.java    # 模块配置类
+├── app/                                    # 应用服务层 (Application Layer)
+│   ├── command/                           # 命令处理器 (CQRS Command)
+│   │   ├── handler/                       # 命令处理器实现
+│   │   └── dto/                           # 命令数据传输对象
+│   ├── query/                             # 查询处理器 (CQRS Query)
+│   │   ├── handler/                       # 查询处理器实现
+│   │   └── dto/                           # 查询数据传输对象
+│   ├── assembler/                         # 对象装配器/转换器
+│   ├── service/                           # 应用服务接口
+│   ├── impl/                              # 应用服务实现
+│   └── orchestrator/                      # 业务编排器
+├── domain/                                # 领域层 (Domain Layer)
+│   ├── model/                             # 领域模型
+│   │   ├── aggregate/                     # 聚合根
+│   │   ├── entity/                        # 实体
+│   │   └── vo/                            # 值对象
+│   ├── event/                             # 领域事件
+│   │   ├── publisher/                     # 事件发布器
+│   │   └── subscriber/                    # 事件订阅器
+│   ├── service/                           # 领域服务接口
+│   ├── impl/                              # 领域服务实现
+│   ├── repo/                              # 仓储接口 (Repository Interface)
+│   ├── gateway/                           # 防腐层网关接口
+│   └── policy/                            # 业务策略/规则
+├── infra/                                 # 基础设施层 (Infrastructure Layer)
+│   ├── persistence/                       # 持久化适配器
+│   │   ├── entity/                        # 持久化实体 (PO)
+│   │   ├── mapper/                        # MyBatis映射器
+│   │   ├── repo/                          # 仓储实现
+│   │   └── assembler/                     # PO-DO转换器
+│   ├── gateway/                           # 外部服务网关实现
+│   │   ├── client/                        # 外部服务客户端
+│   │   ├── dto/                           # 外部服务DTO
+│   │   └── assembler/                     # 外部数据转换器
+│   ├── messaging/                         # 消息基础设施
+│   │   ├── producer/                      # 消息生产者
+│   │   ├── consumer/                      # 消息消费者
+│   │   └── config/                        # 消息配置
+│   └── cache/                             # 缓存适配器
+│       ├── config/                        # 缓存配置
+│       └── strategy/                      # 缓存策略
+└── intf/                                  # 接口适配器层 (Interface Adapters)
+    ├── web/                               # Web适配器
+    │   ├── controller/                    # REST控制器
+    │   │   ├── command/                   # 命令控制器
+    │   │   └── query/                     # 查询控制器
+    │   ├── dto/                           # Web层DTO
+    │   │   ├── request/                   # 请求DTO
+    │   │   └── response/                  # 响应DTO
+    │   ├── assembler/                     # Web层数据转换器
+    │   └── interceptor/                   # Web拦截器
+    ├── facade/                            # 服务门面 (对外暴露)
+    │   ├── api/                           # 门面接口定义
+    │   ├── impl/                          # 门面接口实现
+    │   └── dto/                           # 门面层DTO
+    └── event/                             # 事件适配器
+        ├── listener/                      # 事件监听器
+        └── publisher/                     # 事件发布适配器
 ```
 
-### 3.2 目录结构规范说明
+### 3.2 架构层次与目录规范说明
 
-根据项目重构规范，目录结构需遵循以下命名规则：
+基于六边形架构 + DDD + CQRS 的最佳实践，目录结构遵循以下设计原则：
 
-1. **接口层目录规范**：
-   - 使用 `intf/` 目录，不使用 `interfaces/` 缩写
-   - 保持接口层结构清晰，包含controller和dto子目录
-   - 所有Controller类必须迁移到 `intf/web/controller/` 目录下
-   - 所有DTO类必须迁移到 `intf/web/dto/` 目录下
-   - 禁止在 `intf/web/` 目录下直接存放Controller和DTO文件
-   - 迁移完成后，检查并删除 `intf/web/` 目录下的直接Controller和DTO文件
+#### 3.2.1 架构分层原则
 
-2. **值对象目录规范**：
-   - 使用 `vo/` 目录，不使用 `valueobject/` 缩写
-   - 保持值对象的完整命名，提高代码可读性
+1. **接口适配器层 (intf/)**：
+   - 处理外部世界与应用核心的交互
+   - 包含Web控制器、门面服务、事件监听器等适配器
+   - 实现命令查询分离（CQRS），按command/query分离控制器
+   - 所有Controller类必须迁移到对应的command或query子目录下
+   - 所有DTO按request/response分类，避免混合使用
 
-3. **服务层目录规范**：
-   - `service/` 目录存放服务 api 接口
-   - `impl/` 目录存放服务 api 接口的具体实现
-   - `service` 和 `impl` 目录必须为同级目录，都位于app目录下
-   - **强制要求**：impl目录不得嵌套在service目录内
+2. **应用服务层 (app/)**：
+   - 实现业务用例和应用逻辑编排  
+   - 采用CQRS模式，分离命令处理器(command)和查询处理器(query)
+   - 包含业务编排器(orchestrator)协调复杂业务流程
+   - **强制要求**：service和impl目录为同级关系，不允许嵌套
 
-4. **目录命名一致性原则**：
-   - 所有目录名使用完整单词，不使用缩写
-   - 保持命名语义清晰，便于理解和维护
-   - 避免使用含义模糊的缩写形式
+3. **领域层 (domain/)**：
+   - 包含核心业务逻辑和领域模型
+   - 聚合根(aggregate)管理实体生命周期和业务不变性
+   - 领域事件实现解耦和最终一致性
+   - 防腐层网关接口定义外部依赖抽象
+
+4. **基础设施层 (infra/)**：
+   - 提供技术实现细节，支撑上层业务逻辑
+   - 持久化、外部服务、消息队列、缓存等适配器实现
+   - 遵循依赖倒置原则，实现domain层定义的接口
+
+#### 3.2.2 CQRS实现规范
+
+1. **命令端 (Command)**：
+   - 负责数据变更操作 (Create, Update, Delete)
+   - 命令处理器位于 `app/command/handler/` 
+   - 命令控制器位于 `intf/web/controller/command/`
+   - 专注业务逻辑执行，通常无返回值或返回简单状态
+
+2. **查询端 (Query)**：
+   - 负责数据查询操作 (Read)
+   - 查询处理器位于 `app/query/handler/`
+   - 查询控制器位于 `intf/web/controller/query/`  
+   - 专注数据获取和格式化，可直接访问持久层优化性能
+
+#### 3.2.3 DDD战术设计规范
+
+1. **聚合设计**：
+   - 聚合根确保业务不变性和一致性边界
+   - 实体和值对象分离存放，明确生命周期管理
+   - 聚合间通过领域事件实现解耦
+
+2. **仓储模式**：
+   - 领域层定义仓储接口抽象数据访问
+   - 基础设施层实现具体持久化逻辑
+   - 支持聚合根的完整加载和保存
+
+3. **防腐层设计**：
+   - gateway接口定义外部系统交互契约
+   - 隔离外部系统变化对核心域的影响
+   - 实现数据格式转换和协议适配
+
+#### 3.2.4 目录命名一致性原则
+
+1. **完整语义命名**：
+   - 所有目录名使用完整单词，避免缩写混淆
+   - intf (Interface Adapters)、app (Application)、infra (Infrastructure) 
+   - command/query 体现CQRS分离思想
+
+2. **分层职责清晰**：
+   - 每层目录结构体现其在架构中的职责
+   - 同层级目录保持功能内聚，跨层级遵循依赖方向
+
+3. **扩展性考虑**：
+   - 为微服务拆分预留结构空间
+   - 支持多种外部接口适配（Web、RPC、消息等）
 
 ### 3.3 代码迁移检查清单
 
 为确保代码迁移工作正确执行，必须完成以下检查项：
 
-1. **Controller迁移检查**：
-   - [ ] 检查 `intf/web/` 目录下是否存在直接的Controller文件
-   - [ ] 将所有Controller文件迁移到 `intf/web/controller/` 目录
-   - [ ] 更新所有相关的import语句
-   - [ ] 验证Controller功能正常
+#### 3.3.1 接口层迁移检查
 
-2. **DTO迁移检查**：
-   - [ ] 检查 `intf/web/` 目录下是否存在直接的DTO文件
-   - [ ] 将所有DTO文件迁移到 `intf/web/dto/` 目录
-   - [ ] 更新所有相关的import语句
-   - [ ] 验证DTO功能正常
+1. **Controller按CQRS分离迁移**：
+   - [ ] 识别现有Controller中的命令操作（CREATE、UPDATE、DELETE）
+   - [ ] 将命令操作迁移到 `intf/web/controller/command/` 目录
+   - [ ] 识别现有Controller中的查询操作（SELECT、GET）  
+   - [ ] 将查询操作迁移到 `intf/web/controller/query/` 目录
+   - [ ] 更新所有相关的import语句和路由配置
+   - [ ] 验证CQRS分离后的功能正常
 
-3. **目录清理检查**：
+2. **DTO按用途分类迁移**：
+   - [ ] 将请求相关DTO迁移到 `intf/web/dto/request/` 目录
+   - [ ] 将响应相关DTO迁移到 `intf/web/dto/response/` 目录
+   - [ ] 创建Web层数据转换器到 `intf/web/assembler/` 目录
+   - [ ] 更新所有相关的import语句
+   - [ ] 验证DTO分类后功能正常
+
+#### 3.3.2 应用层重构检查
+
+3. **应用服务按CQRS重构**：
+   - [ ] 创建命令处理器到 `app/command/handler/` 目录
+   - [ ] 创建查询处理器到 `app/query/handler/` 目录
+   - [ ] 设计命令和查询DTO到对应dto子目录
+   - [ ] 实现业务编排器到 `app/orchestrator/` 目录
+   - [ ] 验证应用服务重构后业务逻辑正确
+
+#### 3.3.3 领域层重构检查
+
+4. **领域模型重构**：
+   - [ ] 识别聚合根并迁移到 `domain/model/aggregate/` 目录
+   - [ ] 重构实体到 `domain/model/entity/` 目录
+   - [ ] 提取值对象到 `domain/model/vo/` 目录
+   - [ ] 设计领域事件到 `domain/event/` 目录
+   - [ ] 定义仓储接口到 `domain/repo/` 目录
+   - [ ] 创建防腐层网关接口到 `domain/gateway/` 目录
+
+#### 3.3.4 基础设施层重构检查
+
+5. **基础设施适配器实现**：
+   - [ ] 实现仓储到 `infra/persistence/repo/` 目录
+   - [ ] 创建PO实体到 `infra/persistence/entity/` 目录
+   - [ ] 实现外部服务网关到 `infra/gateway/` 目录
+   - [ ] 配置消息基础设施到 `infra/messaging/` 目录
+   - [ ] 实现缓存适配器到 `infra/cache/` 目录
+
+#### 3.3.5 架构完整性检查
+
+6. **依赖方向验证**：
+   - [ ] 确保接口层只依赖应用层，不直接依赖基础设施层
+   - [ ] 确保应用层只依赖领域层，不依赖基础设施层
+   - [ ] 确保领域层不依赖任何外层，保持核心独立性
+   - [ ] 验证基础设施层正确实现领域层定义的接口
+
+7. **目录清理检查**：
    - [ ] 删除迁移后留下的空目录
-   - [ ] 删除无用的配置文件
-   - [ ] 验证目录结构符合目标架构
+   - [ ] 删除无用的配置文件和临时文件
+   - [ ] 验证目录结构完全符合目标六边形+DDD+CQRS架构
+   - [ ] 确保包路径与目录结构一致
 
 ### 3.4 领域模型设计
 
