重构(规范): 强化目录命名要求与文件清理规范
- 强制要求将目录 interfaces 更名为 intf
- 强制要求将目录 valueobject 更名为 vo
- 强制要求将目录 repository 更名为 repo
- 强制要求将目录 infrastructure 更名为 infra
- 强制删除迁移后留下的空目录及无用的配置文件和临时文件
- 更新文件清理要求，确保执行完毕后强制清理空目录和无用文件

--- a/ps-be/refactor/0-template/plan/biz/单业务模块重构计划模板.md
+++ b/ps-be/refactor/0-template/plan/biz/单业务模块重构计划模板.md
@@ -174,6 +174,7 @@
    - 实现命令查询分离（CQRS），按command/query分离控制器
    - 所有Controller类必须迁移到对应的command或query子目录下
    - 所有DTO按request/response分类，避免混合使用
+   **强制要求**：目录 interfaces 要强制更名为 intf
 
 2. **应用服务层 (app/)**：
    - 实现业务用例和应用逻辑编排  
@@ -186,11 +187,14 @@
    - 聚合根(aggregate)管理实体生命周期和业务不变性
    - 领域事件实现解耦和最终一致性
    - 防腐层网关接口定义外部依赖抽象
+   - **强制要求**：目录 valueobject 要强制更名为 vo
+   - **强制要求**：目录 repository 要强制更名为 repo
 
 4. **基础设施层 (infra/)**：
    - 提供技术实现细节，支撑上层业务逻辑
    - 持久化、外部服务、消息队列、缓存等适配器实现
    - 遵循依赖倒置原则，实现domain层定义的接口
+   - **强制要求**：目录 infrastructure 要强制更名为 infra
 
 #### 3.2.2 CQRS实现规范
 
@@ -296,8 +300,8 @@
    - [ ] 验证基础设施层正确实现领域层定义的接口
 
 7. **目录清理检查**：
-   - [ ] 删除迁移后留下的空目录
-   - [ ] 删除无用的配置文件和临时文件
+   - [ ] 强制删除迁移后留下的空目录
+   - [ ] 强制删除无用的配置文件和临时文件
    - [ ] 验证目录结构完全符合目标六边形+DDD+CQRS架构
    - [ ] 确保包路径与目录结构一致
 
@@ -424,8 +428,8 @@
 
 ### 5.2 文件清理
 - **强制要求**：删除所有空目录和无用文件
-- 检查并删除空的包目录
-- 清理临时文件和无用的配置文件
+- **强制要求**：检查并删除空的包目录
+- **强制要求**：清理临时文件和无用的配置文件
 - **强制要求**：执行完毕后必须在文档中同步状态
 - **执行状态**：☐ 未开始 ☐ 进行中 ☐ 已完成
 
@@ -467,7 +471,7 @@
 6. **强制执行**：确保所有阶段都严格执行完毕
 7. **状态同步**：每个阶段执行完毕后必须在文档中同步状态，不得遗漏
 8. **编译验证**：执行完毕后必须确保重构后的代码在项目中编译通过
-9. **文件清理**：执行完毕后必须清理空目录和无用文件
+9. **文件清理**：执行完毕后必须强制清理空目录和无用文件
 10. **日期准确性**：确保所有日期字段使用系统当前日期
 11. **目录规范**：严格遵守服务层目录规范，impl目录与service目录为同级关系
 12. **文档完整性**：阶段一所有文档必须强制生成
