--- a/ps-be/refactor/0-template/plan/biz/单业务模块重构计划模板.md
+++ b/ps-be/refactor/0-template/plan/biz/单业务模块重构计划模板.md
@@ -102,7 +102,7 @@
 ```
 {{模块名称}}/
 ├── {{模块名称}}ModuleConfiguration.java    # 模块配置类
-├── app/                                    # 应用服务层 (Application Layer)
+├── app/                                   # 应用服务层 (Application Layer)
 │   ├── command/                           # 命令处理器 (CQRS Command)
 │   │   ├── handler/                       # 命令处理器实现
 │   │   └── dto/                           # 命令数据传输对象
@@ -318,30 +318,122 @@
 ### 阶段一：准备与分析（第1周）
 
 **4.1.1 业务接口档案建立**
-- **强制要求**：必须生成以下所有文档，缺一不可
+- **🔴 强制要求**：必须生成以下所有文档，缺一不可，并且存储路径要严格遵守规则设定
+- **🔴 路径合规性**：每个文档的生成路径都经过精确设计，不得有任何偏差或变更
+- **🔴 执行验证**：生成每个文档后必须验证文件确实存在于指定的精确路径
 - 扫描现有Web接口，记录所有API的URL、参数、返回值
 - 生成文档内容主体是中文
-- 生成接口业务说明文档：`{{项目路径}}/refactor/2-info/{{当前日期}}/{{模块名称}}/{{模块名称}}-接口说明.md`，包括接口入参、返回类型，接口作用。文件名字要严格匹配，且该目录只生成这一个文件。
-- 生成接口测试文档：`{{项目路径}}/refactor/3-test/{{当前日期}}/{{模块名称}}/{{模块名称}}-测试接口.md`。文件名字要严格匹配，且该目录只生成这一个文件。文档内容主体是中文，包括接口测试用例、测试步骤。
-- 生成接口测试脚本：文件前缀为 `{{项目路径}}/refactor/4-script/{{当前日期}}/{{模块名称}}/{{模块名称}}-测试脚本`。文件名字要严格匹配，且该目录只生成这一个文件。文件内容主体是中文，根据接口测试文档，生成接口测试脚本。
+
+**📋 必须按以下精确路径生成文档（路径不可变更）：**
+
+1. **接口业务说明文档**：
+   - **精确路径**：`{{项目路径}}/refactor/2-info/{{当前日期}}/{{模块名称}}/{{模块名称}}-接口说明.md`
+   - **路径要求**：必须严格按照此路径生成，不得使用其他路径
+   - **内容要求**：包括接口入参、返回类型，接口作用
+   - **文件名要求**：文件名字要严格匹配模板格式
+   - **目录约束**：该目录下只生成这一个接口说明文档
+   - **⚠️ 路径检查**：生成后必须验证文件存在于 `2-info` 目录下
+
+2. **接口测试文档**：
+   - **精确路径**：`{{项目路径}}/refactor/3-test/{{当前日期}}/{{模块名称}}/{{模块名称}}-测试接口.md`
+   - **路径要求**：必须严格按照此路径生成，注意是 `3-test` 目录
+   - **内容要求**：文档内容主体是中文，包括接口测试用例、测试步骤
+   - **文件名要求**：文件名字要严格匹配模板格式
+   - **目录约束**：该目录下只生成这一个测试接口文档
+   - **⚠️ 路径检查**：生成后必须验证文件存在于 `3-test` 目录下
+
+3. **接口测试脚本**：
+   - **精确路径**：`{{项目路径}}/refactor/4-script/{{当前日期}}/{{模块名称}}/{{模块名称}}-测试脚本`
+   - **路径要求**：必须严格按照此路径生成，注意是 `4-script` 目录
+   - **内容要求**：文件内容主体是中文，根据接口测试文档生成接口测试脚本
+   - **文件名要求**：文件名字要严格匹配模板格式（注意无扩展名）
+   - **目录约束**：该目录下只生成这一个测试脚本文件
+   - **⚠️ 路径检查**：生成后必须验证文件存在于 `4-script` 目录下
+
+**📊 执行状态跟踪**：
 - **执行状态**：☐ 未开始 ☐ 进行中 ☐ 已完成
-- **文档生成检查**：☐ 未完成 ☐ 部分完成 ☑ 全部完成
+- **文档生成检查**：☐ 未完成 ☐ 部分完成 ☐ 全部完成
+- **路径合规检查**：☐ 路径错误 ☐ 路径正确
+
+**🔍 完整性验证清单**：
+- ☐ 接口说明文档已生成到 `2-info` 目录
+- ☐ 测试接口文档已生成到 `3-test` 目录  
+- ☐ 测试脚本已生成到 `4-script` 目录
+- ☐ 所有文件名格式完全匹配模板要求
+- ☐ 所有文档内容为中文
 
 **4.1.2 依赖关系分析**
+- **🔴 强制要求**：必须严格按照指定路径生成分析报告
+- **🔴 路径精确性**：路径设计经过精确规划，不得有任何变更
 - 分析模块内部依赖关系
 - 识别外部模块依赖和第三方依赖
 - 绘制依赖关系图，识别循环依赖风险
-- 生成依赖关系分析报告：`{{项目路径}}/refactor/5-analysis/{{当前日期}}/{{模块名称}}/{{模块名称}}-依赖关系分析.md`。文件名字要严格匹配，且该目录只生成这一个依赖关系分析报告。文档内容主体是中文。
+
+**📋 依赖关系分析文档生成要求：**
+- **精确路径**：`{{项目路径}}/refactor/5-analysis/{{当前日期}}/{{模块名称}}/{{模块名称}}-依赖关系分析.md`
+- **路径要求**：必须严格按照此路径生成，注意是 `5-analysis` 目录
+- **文件名要求**：文件名字要严格匹配，必须是 `{{模块名称}}-依赖关系分析.md`
+- **目录约束**：该目录下只生成这一个依赖关系分析报告
+- **内容要求**：文档内容主体是中文
+- **⚠️ 路径检查**：生成后必须验证文件存在于 `5-analysis` 目录下
+
+**📊 执行跟踪**：
 - **强制要求**：执行完毕后必须在文档中同步状态
 - **执行状态**：☐ 未开始 ☐ 进行中 ☐ 已完成
+- **路径验证**：☐ 路径错误 ☐ 路径正确
 
 **4.1.3 数据模型分析**
+- **🔴 强制要求**：必须严格按照指定路径生成分析报告
+- **🔴 路径精确性**：与依赖关系分析同目录，但文件名不同
 - 梳理现有实体关系
 - 分析PO对象和业务对象的映射关系
 - 识别数据访问模式和查询复杂度
-- 生成数据模型分析报告：`{{项目路径}}/refactor/5-analysis/{{当前日期}}/{{模块名称}}/{{模块名称}}-数据模型分析.md`。文件名字要严格匹配，且该目录只生成这一个数据模型分析报告。文档内容主体是中文。
+
+**📋 数据模型分析文档生成要求：**
+- **精确路径**：`{{项目路径}}/refactor/5-analysis/{{当前日期}}/{{模块名称}}/{{模块名称}}-数据模型分析.md`
+- **路径要求**：必须严格按照此路径生成，注意是 `5-analysis` 目录（与依赖分析同目录）
+- **文件名要求**：文件名字要严格匹配，必须是 `{{模块名称}}-数据模型分析.md`
+- **目录约束**：该目录下生成这一个数据模型分析报告（与依赖分析报告共存）
+- **内容要求**：文档内容主体是中文
+- **⚠️ 路径检查**：生成后必须验证文件存在于 `5-analysis` 目录下
+
+**📊 执行跟踪**：
 - **强制要求**：执行完毕后必须在文档中同步状态
 - **执行状态**：☐ 未开始 ☐ 进行中 ☐ 已完成
+- **路径验证**：☐ 路径错误 ☐ 路径正确
+
+---
+
+## 🎯 阶段一总体合规性检查
+
+**📂 目录结构验证（执行完成后必须检查）**：
+```
+{{项目路径}}/refactor/
+├── 2-info/{{当前日期}}/{{模块名称}}/
+│   └── {{模块名称}}-接口说明.md          ✓必须存在
+├── 3-test/{{当前日期}}/{{模块名称}}/
+│   └── {{模块名称}}-测试接口.md           ✓必须存在
+├── 4-script/{{当前日期}}/{{模块名称}}/
+│   └── {{模块名称}}-测试脚本              ✓必须存在
+└── 5-analysis/{{当前日期}}/{{模块名称}}/
+    ├── {{模块名称}}-依赖关系分析.md      ✓必须存在
+    └── {{模块名称}}-数据模型分析.md      ✓必须存在
+```
+
+**🔍 最终验证清单**：
+- ☐ 所有5个文档都已按精确路径生成
+- ☐ 文件名格式完全符合模板要求
+- ☐ 每个目录下的文档数量符合约束要求
+- ☐ 所有文档内容均为中文
+- ☐ 所有执行状态已在文档中更新为"已完成"
+
+**⚠️ 失败处理机制**：
+- 如任何文档未按精确路径生成，必须重新执行该步骤
+- 如文件名不匹配模板格式，必须重命名或重新生成
+- 如目录结构不符合要求，必须重新创建正确的目录结构
+
+**✅ 成功标准**：
+只有当所有5个文档都按精确路径生成，文件名完全匹配，目录结构完全正确，才可以标记阶段一为"已完成"。
 
 ### 阶段二：目录结构重构（第2周）
 
