--- a/ps-be/refactor/0-template/plan/biz/单业务模块重构计划模板.md
+++ b/ps-be/refactor/0-template/plan/biz/单业务模块重构计划模板.md
@@ -7,6 +7,8 @@
 2. 严格执行生成的重构计划文档的每一步。
 3. 将重构计划的每阶段执行进度和结果同步到该重构计划文档中。
 4. **强制要求**：确保所有阶段执行完毕，清理无用文件，并保证重构后的代码在项目中编译通过。
+5. **强制要求**：模块在执行重构计划后如果还有空目录，依旧需要强制严格删除。
+6. **强制要求**：计划执行完毕仅仅编译正确不够，运行时不报错才可以。
 
 **执行要求**：
 1. 仔细分析所有输入资料，准确理解模块的业务职责和技术现状
@@ -18,6 +20,8 @@
 7. **强制要求**：所有阶段必须执行完毕，不得遗漏
 8. **强制要求**：执行完毕后必须清理空目录和无用文件
 9. **强制要求**：执行完毕后必须确保重构后的代码在项目中编译通过
+10. **强制要求**：执行完毕后必须确保重构后的代码在项目中运行时不报错
+11. **强制要求**：即使模块目录结构符合DDR+CQRS规范，但执行后产生的空目录必须强制删除
 
 ---
 
@@ -246,64 +250,23 @@
 
 为确保代码迁移工作正确执行，必须完成以下检查项：
 
-#### 3.3.1 接口层迁移检查
-
-1. **Controller按CQRS分离迁移**：
-   - [ ] 识别现有Controller中的命令操作（CREATE、UPDATE、DELETE）
-   - [ ] 将命令操作迁移到 `intf/web/controller/command/` 目录
-   - [ ] 识别现有Controller中的查询操作（SELECT、GET）  
-   - [ ] 将查询操作迁移到 `intf/web/controller/query/` 目录
-   - [ ] 更新所有相关的import语句和路由配置
-   - [ ] 验证CQRS分离后的功能正常
-
-2. **DTO按用途分类迁移**：
-   - [ ] 将请求相关DTO迁移到 `intf/web/dto/request/` 目录
-   - [ ] 将响应相关DTO迁移到 `intf/web/dto/response/` 目录
-   - [ ] 创建Web层数据转换器到 `intf/web/assembler/` 目录
+1. **Controller迁移检查**：
+   - [ ] 检查 `intf/web/` 目录下是否存在直接的Controller文件
+   - [ ] 将所有Controller文件迁移到 `intf/web/controller/` 目录
    - [ ] 更新所有相关的import语句
-   - [ ] 验证DTO分类后功能正常
+   - [ ] 验证Controller功能正常
 
-#### 3.3.2 应用层重构检查
+2. **DTO迁移检查**：
+   - [ ] 检查 `intf/web/` 目录下是否存在直接的DTO文件
+   - [ ] 将所有DTO文件迁移到 `intf/web/dto/` 目录
+   - [ ] 更新所有相关的import语句
+   - [ ] 验证DTO功能正常
 
-3. **应用服务按CQRS重构**：
-   - [ ] 创建命令处理器到 `app/command/handler/` 目录
-   - [ ] 创建查询处理器到 `app/query/handler/` 目录
-   - [ ] 设计命令和查询DTO到对应dto子目录
-   - [ ] 实现业务编排器到 `app/orchestrator/` 目录
-   - [ ] 验证应用服务重构后业务逻辑正确
-
-#### 3.3.3 领域层重构检查
-
-4. **领域模型重构**：
-   - [ ] 识别聚合根并迁移到 `domain/model/aggregate/` 目录
-   - [ ] 重构实体到 `domain/model/entity/` 目录
-   - [ ] 提取值对象到 `domain/model/vo/` 目录
-   - [ ] 设计领域事件到 `domain/event/` 目录
-   - [ ] 定义仓储接口到 `domain/repo/` 目录
-   - [ ] 创建防腐层网关接口到 `domain/gateway/` 目录
-
-#### 3.3.4 基础设施层重构检查
-
-5. **基础设施适配器实现**：
-   - [ ] 实现仓储到 `infra/persistence/repo/` 目录
-   - [ ] 创建PO实体到 `infra/persistence/entity/` 目录
-   - [ ] 实现外部服务网关到 `infra/gateway/` 目录
-   - [ ] 配置消息基础设施到 `infra/messaging/` 目录
-   - [ ] 实现缓存适配器到 `infra/cache/` 目录
-
-#### 3.3.5 架构完整性检查
-
-6. **依赖方向验证**：
-   - [ ] 确保接口层只依赖应用层，不直接依赖基础设施层
-   - [ ] 确保应用层只依赖领域层，不依赖基础设施层
-   - [ ] 确保领域层不依赖任何外层，保持核心独立性
-   - [ ] 验证基础设施层正确实现领域层定义的接口
-
-7. **目录清理检查**：
-   - [ ] 强制删除迁移后留下的空目录
-   - [ ] 强制删除无用的配置文件和临时文件
-   - [ ] 验证目录结构完全符合目标六边形+DDD+CQRS架构
-   - [ ] 确保包路径与目录结构一致
+3. **目录清理检查**：
+   - [ ] 删除迁移后留下的空目录
+   - [ ] **强制要求**：即使模块目录结构符合DDR+CQRS规范，但执行后产生的空目录必须强制删除
+   - [ ] 删除无用的配置文件
+   - [ ] 验证目录结构符合目标架构
 
 ### 3.4 领域模型设计
 
@@ -440,7 +403,7 @@
 **4.2.1 目录结构调整**
 - 按照3.1节定义的目标DDD架构，重新组织模块目录结构
 - 移动现有文件到新的目录结构中，确保包路径与目录路径一致
-- 清理空目录和无用文件
+- **强制要求**：清理空目录和无用文件，即使模块目录结构符合DDR+CQRS规范，但执行后产生的空目录必须强制删除
 - 更新所有相关的import语句和配置文件
 - **强制要求**：执行完毕后必须在文档中同步状态
 - **执行状态**：☐ 未开始 ☐ 进行中 ☐ 已完成
@@ -513,19 +476,29 @@
 
 ### 5.1 编译验证
 - **强制要求**：确保重构后的代码在ps-be整个项目中编译通过
-- 执行完整的Maven编译命令：`mvn clean compile spring-boot:run -DskipTests`
+- 执行完整的Maven编译命令：`mvn clean compile -DskipTests`
 - 记录编译结果和任何错误信息
 - **强制要求**：执行完毕后必须在文档中同步状态
 - **执行状态**：☐ 未开始 ☐ 进行中 ☐ 已完成
 
-### 5.2 文件清理
-- **强制要求**：删除所有空目录和无用文件
-- **强制要求**：检查并删除空的包目录
-- **强制要求**：清理临时文件和无用的配置文件
+### 5.2 运行时验证
+- **强制要求**：确保重构后的代码在ps-be整个项目中运行时不报错
+- 执行完整的Maven运行命令：`mvn spring-boot:run -DskipTests`
+- 验证应用程序能够正常启动并运行
+- 检查所有控制器和接口能够正确注册和访问
+- 记录运行时错误和异常信息
 - **强制要求**：执行完毕后必须在文档中同步状态
 - **执行状态**：☐ 未开始 ☐ 进行中 ☐ 已完成
 
-### 5.3 状态同步
+### 5.3 文件清理
+- **强制要求**：删除所有空目录和无用文件
+- **强制要求**：即使模块目录结构符合DDR+CQRS规范，但执行后产生的空目录必须强制删除
+- 检查并删除空的包目录
+- 清理临时文件和无用的配置文件
+- **强制要求**：执行完毕后必须在文档中同步状态
+- **执行状态**：☐ 未开始 ☐ 进行中 ☐ 已完成
+
+### 5.4 状态同步
 - **强制要求**：将所有阶段的执行状态同步到本文档中
 - 更新验收标准的完成情况
 - 记录重构过程中的问题和解决方案
@@ -541,6 +514,7 @@
 
 ### 6.2 质量验收标准  
 - [ ] **代码编译**：所有代码编译通过，无编译错误和警告
+- [ ] **运行时验证**：应用程序能够正常启动和运行，无运行时错误
 - [ ] **测试覆盖**：单元测试覆盖率≥80%
 - [ ] **代码质量**：代码重复率<5%，复杂度评级≥B级
 
@@ -548,6 +522,7 @@
 - [ ] **DDD架构**：严格遵循DDD分层架构和命名规范
 - [ ] **依赖管理**：消除循环依赖，依赖方向符合架构原则
 - [ ] **接口设计**：API设计遵循RESTful规范
+- [ ] **目录清理**：无空目录，所有目录都有实际用途
 
 ---
 
@@ -563,10 +538,11 @@
 6. **强制执行**：确保所有阶段都严格执行完毕
 7. **状态同步**：每个阶段执行完毕后必须在文档中同步状态，不得遗漏
 8. **编译验证**：执行完毕后必须确保重构后的代码在项目中编译通过
-9. **文件清理**：执行完毕后必须强制清理空目录和无用文件
-10. **日期准确性**：确保所有日期字段使用系统当前日期
-11. **目录规范**：严格遵守服务层目录规范，impl目录与service目录为同级关系
-12. **文档完整性**：阶段一所有文档必须强制生成
+9. **运行时验证**：执行完毕后必须确保重构后的代码在项目中运行时不报错
+10. **文件清理**：执行完毕后必须清理空目录和无用文件，即使目录结构符合DDR+CQRS规范，但执行后产生的空目录必须强制删除
+11. **日期准确性**：确保所有日期字段使用系统当前日期
+12. **目录规范**：严格遵守服务层目录规范，impl目录与service目录为同级关系
+13. **文档完整性**：阶段一所有文档必须强制生成
 
 **质量检查清单**：
 - [ ] 所有占位符已被具体内容替换
@@ -577,7 +553,8 @@
 - [ ] 所有阶段都已执行完毕
 - [ ] 所有阶段状态已在文档中同步
 - [ ] 重构后的代码在项目中编译通过
-- [ ] 空目录和无用文件已被清理
+- [ ] 重构后的代码在项目中运行时不报错
+- [ ] 空目录和无用文件已被清理（包括执行后产生的空目录）
 - [ ] 当前日期获取准确无误
 - [ ] 服务层目录规范严格遵守
 - [ ] 阶段一所有文档已强制生成
