--- a/ps-be/refactor/0-template/plan/biz/单业务模块重构计划模板.md
+++ b/ps-be/refactor/0-template/plan/biz/单业务模块重构计划模板.md
@@ -287,6 +287,8 @@
 - 扫描现有Web接口，记录所有API的URL、参数、返回值
 - 生成文档内容主体是中文
 
+路径设置：{{项目路径}} 为 D:\keycloak_sb_sso_new0910_claude\ps\ps-be\
+
 **📋 必须按以下精确路径生成文档（路径不可变更）：**
 
 1. **接口业务说明文档**：
@@ -401,7 +403,7 @@
 ### 阶段二：目录结构重构（第2周）
 
 **4.2.1 目录结构调整**
-- 按照3.1节定义的目标DDD架构，重新组织模块目录结构
+- 按照3.1节定义的目标DDD架构，重新组织模块目录结构（必须要做个计划并执行，使得新的目录结构和3.1节定义的目标DDD架构完全一致）
 - 移动现有文件到新的目录结构中，确保包路径与目录路径一致
 - **强制要求**：清理空目录和无用文件，即使模块目录结构符合DDR+CQRS规范，但执行后产生的空目录必须强制删除
 - 更新所有相关的import语句和配置文件
