--- a/ps-be/refactor/0-template/prompt/biz/单业务模板重构计划模板-提示词.md
+++ b/ps-be/refactor/0-template/prompt/biz/单业务模板重构计划模板-提示词.md
@@ -1,1 +1,1 @@
-严格参照  D:\jiuxi\project\ps\ps-be\refactor\0-template\plan\biz\单业务模块重构计划模板.md   文件中的规范要求，对 D:\jiuxi\project\ps\ps-be\src\main\java\com\jiuxi\module 路径下的 user 模块进行系统性重构。如果您不确定用户发的文件内容或代码库结构，请使用您的工具读取文件并收集相关信息，不要猜测或编造答案。确保重构过程完全遵循模板中的标准流程、代码规范和架构设计原则。你必须在每次函数调用之前进行全面的计划，并全面地考虑之前函数调用的结果。不要通过只调用函数来完成整个过程，因为这会损害你解决问题和深入思考的能力。
+严格参照  D:\keycloak_sb_sso_new0910_claude\ps\ps-be\refactor\0-template\plan\biz\单业务模块重构计划模板.md   文件中的规范要求，对 D:\keycloak_sb_sso_new0910_claude\ps\ps-be\src\main\java\com\jiuxi\module 路径下的 role 模块进行系统性重构。如果您不确定用户发的文件内容或代码库结构，请使用您的工具读取文件并收集相关信息，不要猜测或编造答案。确保重构过程完全遵循模板中的标准流程、代码规范和架构设计原则。你必须在每次函数调用之前进行全面的计划，并全面地考虑之前函数调用的结果。不要通过只调用函数来完成整个过程，因为这会损害你解决问题和深入思考的能力。
