--- a/ps-be/细粒度重构实施表.md
+++ b/ps-be/细粒度重构实施表.md
@@ -24,20 +24,20 @@
 
 | 任务编号 | 任务名称 | 负责人 | 开始时间 | 结束时间 | 工作量(人天) | 状态 | 交付物 | 验收标准 |
 |---------|----------|--------|----------|----------|-------------|------|--------|----------|
-| T1.1.1 | 设计完整包结构图 | 架构师 | 2024-01-08 | 2024-01-08 | 1 | 待开始 | 包结构设计图 | 符合DDD分层架构 |
-| T1.1.2 | 创建app层包结构 | 架构师 | 2024-01-09 | 2024-01-09 | 1 | 待开始 | app包目录 | 包含service/command/query/assembler |
-| T1.1.3 | 创建module层包结构 | 架构师 | 2024-01-09 | 2024-01-10 | 1 | 待开始 | module包目录 | 按领域划分子包 |
-| T1.1.4 | 创建infra层包结构 | 架构师 | 2024-01-10 | 2024-01-10 | 1 | 待开始 | infra包目录 | 包含persistence/cache/messaging/external |
-| T1.1.5 | 创建intf层包结构 | 架构师 | 2024-01-10 | 2024-01-10 | 1 | 待开始 | intf包目录 | 包含web/rpc/mq/scheduler |
+| T1.1.1 | 设计完整包结构图 | 架构师 | 2024-01-08 | 2024-01-08 | 1 | 已完成 | 包结构设计图(refactor/standards/包结构设计图.md) | 符合DDD分层架构 |
+| T1.1.2 | 创建app层包结构 | 架构师 | 2024-01-09 | 2024-01-09 | 1 | 已完成 | app包目录 | 包含service/command/query/assembler |
+| T1.1.3 | 创建module层包结构 | 架构师 | 2024-01-09 | 2024-01-10 | 1 | 保持现状 | module包目录 | 按领域划分子包 |
+| T1.1.4 | 创建infra层包结构 | 架构师 | 2024-01-10 | 2024-01-10 | 1 | 已完成 | infra包目录 | 包含persistence/cache/messaging/external |
+| T1.1.5 | 创建intf层包结构 | 架构师 | 2024-01-10 | 2024-01-10 | 1 | 已完成 | intf包目录 | 包含web/rpc/mq/scheduler |
 | T1.1.6 | 验证包结构编译 | 架构师 | 2024-01-10 | 2024-01-10 | 0.5 | 待开始 | 编译成功日志 | 新包结构编译通过 |
 
 ### 1.2 架构规范制定（第2周后2天）
 
 | 任务编号 | 任务名称 | 负责人 | 开始时间 | 结束时间 | 工作量(人天) | 状态 | 交付物 | 验收标准 |
 |---------|----------|--------|----------|----------|-------------|------|--------|----------|
-| T1.2.1 | 制定包命名规范 | 架构师 | 2024-01-11 | 2024-01-11 | 1 | 待开始 | 命名规范文档 | 规范清晰无歧义 |
-| T1.2.2 | 定义层间依赖规则 | 架构师 | 2024-01-11 | 2024-01-12 | 1 | 待开始 | 依赖规则文档 | 依赖方向明确 |
-| T1.2.3 | 配置ArchUnit检查 | 架构师 | 2024-01-12 | 2024-01-12 | 1 | 待开始 | ArchUnit配置 | 自动检查依赖违规 |
+| T1.2.1 | 制定包命名规范 | 架构师 | 2024-01-11 | 2024-01-11 | 1 | 已完成 | 命名规范文档(refactor/standards/包命名规范.md) | 规范清晰无歧义 |
+| T1.2.2 | 定义层间依赖规则 | 架构师 | 2024-01-11 | 2024-01-12 | 1 | 已完成 | 依赖规则文档(refactor/standards/层间依赖规则.md) | 依赖方向明确 |
+| T1.2.3 | 配置ArchUnit检查 | 架构师 | 2024-01-12 | 2024-01-12 | 1 | 已完成 | ArchUnit配置(pom.xml profile: archunit; src/archunit-test规则) | 自动检查依赖违规 |
 
 ### 1.3 迁移工具准备（第3周）
 
