--- a/ps-be/docs/验证码外部文件夹配置说明.md
+++ b/ps-be/docs/验证码外部文件夹配置说明.md
@@ -148,7 +148,7 @@ chown -R app:app /opt/ps/captcha-resources
 ### 1. 检查配置
 ```bash
 # 查看当前配置
-curl http://localhost:8082/ps-be/actuator/configprops | grep captcha
+curl http://192.168.0.139:8082/ps-be/actuator/configprops | grep captcha
 ```
 
 ### 2. 检查日志
